jiradaki düzeltmeler yapıldı